fix: header z-index

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,7 @@ header {
     position: fixed;
     width: 100%;
     background-color: white;
+    z-index: 10000;
 
 
 }
